added localization support in shared views and javascripts

--- a/src/Presentation/Views/BookEditions/AddBookEdition.cshtml
+++ b/src/Presentation/Views/BookEditions/AddBookEdition.cshtml
@@ -137,6 +137,10 @@
         const preselectedLanguage = @Model.LanguageId;
         const preselectedPublisher = @Model.PublisherId;
         const preselectedRoom = @Model.RoomId;
+
+        const languagePlaceholder = 'Select a language';
+        const publisherPlaceholder = 'Select a publisher';
+        const roomPlaceholder = 'Select a room';
     </script>
 }
 
