--- a/src/Presentation/Views/Checkouts/AddCheckout.cshtml
+++ b/src/Presentation/Views/Checkouts/AddCheckout.cshtml
@@ -105,6 +105,10 @@
         const preselectedAccount = @Model.AccountId;
         const preselectedBook = @Model.BookId;
         const preselectedBookEdition = @Model.BookEditionId;
+
+        const accountPlaceholder = 'Select an account';
+        const bookPlaceholder = 'Select a book';
+        const bookEditionPlaceholder = 'Select a book edition';
     </script>
 }
 
