--- a/src/Presentation/Views/Checkouts/Checkout.cshtml
+++ b/src/Presentation/Views/Checkouts/Checkout.cshtml
@@ -172,5 +172,9 @@
     <script>
         var id = '@Model.Id';
         var userAction = '@userAction';
+
+        const accountPlaceholder = 'Select an account';
+        const bookPlaceholder = 'Select a book';
+        const bookEditionPlaceholder = 'Select a book edition';
     </script>
 }
