--- a/src/Presentation/Views/_ViewImports.cshtml
+++ b/src/Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Nika1337.Library.Presentation.Models
+@using Microsoft.AspNetCore.Mvc.Localization
